[package]
name = "oliframe"
description = "Add a simple border to one or more images"
repository = "https://github.com/calteran/oliframe"
version = "0.2.3"
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/oliframe"
homepage = "https://github.com/calteran/oliframe"
categories = ["command-line-utilities", "graphics"]
keywords = ["image", "border", "frame"]
exclude = ["samples/", ".github/"]
rust-version = "1.75.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
csscolorparser = "0.7.0"
env_logger = "0.11.5"
image = { version = "0.25.5", features = ["rayon"] }
log = "0.4.22"
rayon = "1.10.0"
walkdir = "2.5.0"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "2.0.3"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
fs_extra = "1.3.0"
tempfile = "3.14.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
