[package]
name = "oliframe"
description = "Add a simple border to one or more images"
repository = "https://github.com/calteran/oliframe"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/oliframe"
homepage = "https://github.com/calteran/oliframe"
categories = ["command-line-utilities", "graphics"]
keywords = ["image", "border", "frame"]
exclude = ["samples/", ".github/"]
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
csscolorparser = "0.7.0"
env_logger = "0.11.6"
image = { version = "0.25.5", features = ["rayon"] }
log = "0.4.26"
rayon = "1.10.0"
walkdir = "2.5.0"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.11"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
fs_extra = "1.3.0"
tempfile = "3.17.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
